--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
     color: white;
 }
 
+.App-header-dark {
+    background-color: #000000;
+    color: white;
+}
+
 .App-link {
     color: #61dafb;
 }
@@ -46,4 +51,15 @@
 
 .btn {
     border-radius: 2rem !important;
+}
+
+.btn-darkmode {
+    display: flex;
+    position: absolute;
+    right: 0;
+    margin: 1rem;
+}
+
+.toast-container {
+    font-size: 20px;
 }
