--- a/src/components/MarketList/marketList.css
+++ b/src/components/MarketList/marketList.css
@@ -40,11 +40,14 @@
     justify-content: space-between;
     background: #a6adb9;
     width: auto;
+    transition: all 0.3s ease-in-out;
 }
 
 .list-item-dark {
     background: #16181c;
     color: #c8c8c8;
+    transition: all 0.3s ease-in-out;
+
 }
 
 .list-item-id {
@@ -69,19 +72,30 @@
 
 .list-item-btn {
     margin-left: 0.5rem;
-    padding: 0.4rem;
+    /* padding: 0.4rem; */
 }
 
 .list-item-btn-dark {
-    background: transparent;
+    background: transparent !important;
 }
 
 .list-item-btn-danger-dark {
     color: #bb2d3b;
 }
+
 .list-item-btn-primary-dark {
     color: #0d6efd;
 }
+
 .list-item-btn-success-dark {
     color: #157347;
+}
+
+.disabled-dark {
+    color: grey !important;
+    border-color: grey !important;
+    opacity: 0.4 !important;
+    /* color: #0d6efd !important; */
+    /* background-color: transparent !important; */
+    /* border-color: #0d6efd !important; */
 }
