FIX: css import & added minus btn

--- a/src/Theme/theme.css
+++ b/src/Theme/theme.css
@@ -1,4 +1,4 @@
-light:
+/* light:
 --background-primary: #707c92
 --background-secondary: #a6adb9
 --primary: #0d6efd
@@ -12,4 +12,4 @@ dark:
 --primary: #0d6efd
 --success: #157347
 --danger: #bb2d3b
---react: #61dafb
+--react: #61dafb */
