--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,25 @@
 .Toastify__toast>button>svg {
   display: none;
 }
+
+@media only screen and (max-width: 480px) {
+  .App-header {
+    justify-content: start;
+  }
+
+  .Toastify__toast-body {
+    /* color: #444c63; */
+    font-size: 16px;
+    padding-left: 20px;
+    line-height: 20px;
+    padding: 0px;
+    padding-top: 25px;
+    font-weight: 400;
+    margin-left: 25px !important;
+  }
+
+  .Toastify__toast {
+    margin: auto;
+    width: 60%;
+  }
+}
