--- a/src/Styles/global.css
+++ b/src/Styles/global.css
@@ -1,34 +1,4 @@
-:root {
-  /* Themes */
-  /* dark */
-  --bg-dark: #16181c;
-  --bg-list-dark: #1f2431;
-  --label-dark: #c8c8c8;
-  /* light */
-  --bg-light: #707c92;
-  --bg-list-light: #a6adb9;
-  --label-light: #212529;
-
-  --black: #212529;
-
-  /* Colours */
-  --primary: #0d6efd;
-  --danger: #bb2d3b;
-  --secondary: #6c757d;
-  --success: #157347;
-
-  --secondary-dark: #5c636a;
-  --secondary-darker: #6c757d;
-
-  --font-size: 20px;
-  --font-size-mobile: 20px;
-  --btn-size: 2rem;
-  --btn-size-mobile: 2rem;
-}
-
-[class*="dark"] {
-  transition: all 0.3s ease-in-out;
-}
+@import "../Theme/theme.css";
 
 .btn {
   border-radius: 2rem;
